--- a/Regression_Mini-Project.ipynb
+++ b/Regression_Mini-Project.ipynb
@@ -14,6 +14,41 @@
       "metadata": {
         "id": "8dgkayuWDuNX"
       },
+      "source": [
+        "***Edit this cell with your name(s), tutorial number(s) and ID(s)***\n",
+        "\n",
+        "---\n",
+        "\n",
+        "Name: \n",
+        "\n",
+        "ID: \n",
+        "\n",
+        "Tutorial: \n",
+        "\n",
+        "---\n",
+        "\n",
+        "Name: \n",
+        "\n",
+        "ID: \n",
+        "\n",
+        "Tutorial: \n",
+        "\n",
+        "---\n",
+        "\n",
+        "Name:\n",
+        "\n",
+        "ID:\n",
+        "\n",
+        "Tutorial:\n",
+        "\n",
+        "---\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "8dgkayuWDuNX"
+      },
     {
       "cell_type": "markdown",
       "metadata": {
